일시 : 21.12.05 내용 : 패키지 기본 구성 추가, 로그 select 패키지 생성작성자 : 박재욱

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,8 @@ server:
     multipart:
       maxFileSize: 10MB
       maxRequestSize: 100MB  
+    ssl:
+        
 spring:
   mvc:
     view:
@@ -19,7 +21,6 @@ spring:
     url: jdbc:postgresql://localhost:5432/
     username: postgres
     password: postgres
-
     
   jpa:
     database: POSTGRESQL
