--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,9 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
-		<!-- Spring Security <dependency> <groupId>org.springframework.boot</groupId> 
-			<artifactId>spring-boot-starter-security</artifactId> </dependency> -->
+		<!-- Spring Security  -->
+		<dependency> <groupId>org.springframework.boot</groupId> 
+			<artifactId>spring-boot-starter-security</artifactId> </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
